ansible/files/ocp/neutron-api/2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &name neutron-api
  namespace: openstack
  labels:
    app: *name
spec:
  ports:
  - name: api
    port: 9696
    protocol: TCP
  selector:
    app: neutron-api
  type: ClusterIP
