ansible/files/ocp/neutron-api/2/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: &name neutron-api
  namespace: openstack
  labels:
    app: *name
spec:
  host: neutron.apps.ostest.test.metalkube.org
  path: /
  to:
    kind: Service
    name: *name
  port:
    targetPort: api
